fixed all java doc issues